# dm-TimeWarp

./: .gitignore  README.md
.cargo/: config.toml
.github/workflows/: build.yml  dm-grainstretch.mk  dm-timewarp.mk
.github/workflows/AUv2/: top_level_default.cmake
grain_stretch/: Cargo.toml
grain_stretch/src/: _dc_block.rs  _gen_code  dc_block.rs  filter.rs  grain.rs  grain_trigger.rs  grains.rs  lib.rs  notes.rs  params.rs  start_phasor.rs  stereo_delay_line.rs  voices.rs  wav_processor.rs
grain_stretch/src/grains/: grain.rs  start_phasor.rs
grain_stretch/src/notes/: note.rs
grain_stretch/src/params/: stopwatch.rs  wav_processor.rs
grain_stretch/src/shared/: phasor.rs  tuple_ext.rs
grain_stretch/src/voices/: adsr.rs  grain_trigger.rs  grains.rs  start_phasor.rs  voice.rs
grain_stretch/src/voices/grains/: grain.rs  grain_trigger.rs  start_phasor.rs
grain_stretch/src/voices/voice/: adsr.rs
lv2/: Cargo.toml
lv2/dm-GrainStretch.lv2/: dm-GrainStretch.ttl  manifest.ttl  modgui.ttl
lv2/dm-TimeWarp.lv2/: dm-TimeWarp.ttl  manifest.ttl  modgui.ttl
lv2/dm-TimeWarp.lv2/modgui/: icon-dm-timewarp.html  javascript.js  stylesheet-dm-timewarp.css
lv2/src/: events.rs  lib.rs  state.rs  worker.rs
nih-plug/: Cargo.toml
nih-plug/src/: editor.rs  file_loader.rs  grain_stretch_parameters.rs  lib.rs  main.rs  time_warp_parameters.rs  worker.rs
nih-plug/src/editor/: assets.rs  param_button.rs  param_file_drop.rs  param_footswitch.rs  param_knob.rs  param_number_input.rs  param_slider.rs  param_switch.rs  param_tabs.rs  style.css  ui_data.rs
nih-plug/src/editor/components/: param_checkbox.rs  param_file_drop.rs  param_footswitch.rs  param_number_input.rs  param_slider.rs  param_switch.rs  param_tabs.rs
nih-plug/src/editor/param_knob/: arc_track.rs
nih-plug/src/grain_stretch_parameters/: custom_formatters.rs
nih-plug/src/time_warp_parameters/: custom_formatters.rs
profiling/: Cargo.toml
profiling/benches/: flush_buffer_bench.rs  time_warp_bench.rs
profiling/src/: main.rs
scripts/: bench-adsr-apply-curve.sh  bench-cosine-interp.sh  build-lv2-for-mod-desktop-mac.sh  build-standalone-on-mac.sh  build-standalone.sh  build-ui.sh  build-vst3-for-mac.sh  debug-standalone-on-mac.sh
time_warp/: Cargo.toml
time_warp/src/: audio_file_processor.rs  delay_line.rs  filter.rs  lib.rs  looper.rs  mix.rs  notes.rs  params.rs  stereo_delay_line.rs  voices.rs  wav_processor.rs
time_warp/src/audio_file_processor/: fade_in_out.rs
time_warp/src/filter/: one_pole_filter.rs
time_warp/src/notes/: note.rs
time_warp/src/params/: phasor.rs  smooth.rs  stopwatch.rs
time_warp/src/shared/: delta.rs  float_ext.rs  phasor.rs  synced_phasor.rs
time_warp/src/voices/: adsr.rs  grain_trigger.rs  grains.rs  linear_adsr.rs  start_phasor.rs  start_position_phasor.rs
time_warp/src/voices/grains/: grain.rs  rsqrt_table.rs
