[package]
name = "dm_time_warp"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2 = { path = "../../rust-lv2", features = [
    "full", "wmidi"
] }
time_warp = { path = "../time_warp" }
wmidi = "3.1.0"

[lib]
crate-type = ["cdylib"]
