[package]
name = "dm_time_warp"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
time_warp = { path = "../time_warp" }
rfd = "0.15.2"
crossbeam-channel = "0.5.15"

[workspace]
members = ["xtask"]
